# SSLG4

./: HISTORY  LICENCE.txt  README.md
sslg4/: CMakeLists.txt
sslg4/data/: README.txt
sslg4/data/iscnt/isc-1000/: rIndex.txt  scntComp1.txt
sslg4/data/iscnt/isc-1001/: scntComp1.txt
sslg4/data/iscnt/isc-2000/: absLength.txt  rIndex.txt
sslg4/data/iscnt/isc-2002/: rIndex.txt
sslg4/data/iscnt/isc-3000/: rsLength.txt  scntComp1.txt
sslg4/data/iscnt/isc-3001/: scntComp2.txt
sslg4/data/iscnt/isc-3002/: rIndex.txt
sslg4/data/oscnt/olsc-100/: scntDeuteronYield.txt  scntElectronYield.txt
sslg4/data/oscnt/olsc-103/: absLength.txt
sslg4/data/oscnt/olsc-105/: scntComp1.txt
sslg4/data/oscnt/olsc-106/: rIndex.txt
sslg4/data/oscnt/olsc-108/: rIndex.txt
sslg4/data/oscnt/olsc-111/: rIndex.txt  scntComp1.txt
sslg4/data/oscnt/olsc-112/: scntComp1.txt
sslg4/data/oscnt/olsc-113/: rIndex.txt
sslg4/data/oscnt/olsc-200/: rIndex.txt  wbls_1pct_WM_0820.ods
sslg4/data/oscnt/olsc-201/: absLength.txt
sslg4/data/oscnt/olsc-202/: .~lock.wbls_3pct_gd_01pct_WM_0820.ods#  wbls_3pct_WM_0820.ods
sslg4/data/oscnt/olsc-203/: absLength.txt  wbls_3pct_gd_01pct_WM_0820.ods
sslg4/data/oscnt/opsc-100/: scntComp1.txt
sslg4/data/oscnt/opsc-101/: absLength.txt  scntComp1.txt
sslg4/data/oscnt/opsc-102/: absLength.txt
sslg4/data/oscnt/opsc-106/: scntComp1.txt
sslg4/data/oscnt/opsc-109/: rIndex.txt
sslg4/data/oscnt/opsc-113/: absLength.txt
sslg4/data/oscnt/opsc-114/: scntComp1.txt
sslg4/data/oscnt/opsc-122/: scntComp1.txt
sslg4/data/oscnt/opsc-123/: absLength.txt
sslg4/data/oscnt/opsc-133/: rIndex.txt
sslg4/data/oscnt/opsc-200/: scntComp1.txt
sslg4/data/oscnt/opsc-201/: scntComp1.txt
sslg4/data/oscnt/opsc-400/: absLength.txt
sslg4/include/: InorganicScintillatorFactory.hh  OrganicScintillatorFactory.hh
sslg4/macros/: README.txt
sslg4/macros/iscnt/: isc-2003.mac  isc-3002.mac
sslg4/macros/oscnt/: olsc-101.mac  olsc-108.mac  olsc-112.mac  olsc-200.mac  olsc-202.mac  opsc-101.mac  opsc-104.mac  opsc-107.mac  opsc-115.mac  opsc-117.mac  opsc-118.mac  opsc-124.mac  opsc-129.mac  opsc-300.mac  opsc-400.mac
sslg4/src/: EJ426Builder.cc  InorganicScintillatorFactory.cc  OrganicScintillatorFactory.cc
testSSLG4Ex/: CMakeLists.txt  init_vis.mac  main.cc  run.mac
testSSLG4Ex/OPSim/include/: ScintillatorBuilder.hh
testSSLG4Ex/include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorConstructionMsgr.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SimOutputManager.hh  SimOutputManagerMsgr.hh  StackingAction.hh  SteppingAction.hh
testSSLG4Ex/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstructionMsgr.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SimOutputManager.cc  SimOutputManagerMsgr.cc  StackingAction.cc  SteppingAction.cc
testSSLG4Ex/sslg4/data/iscnt/isc-2001/: rIndex.txt  scntComp1.txt
testSSLG4Ex/sslg4/data/iscnt/isc-2002/: scntComp1.txt
testSSLG4Ex/sslg4/data/iscnt/isc-3000/: rIndex.txt
testSSLG4Ex/sslg4/data/iscnt/isc-3001/: aScntYield.txt  iScntYield.txt
testSSLG4Ex/sslg4/data/iscnt/isc-3002/: scntComp2.txt
testSSLG4Ex/sslg4/data/oscnt/olsc-100/: absLength.txt  rIndex.txt
testSSLG4Ex/sslg4/data/oscnt/olsc-101/: absLength.txt
testSSLG4Ex/sslg4/data/oscnt/olsc-104/: scntComp1.txt
testSSLG4Ex/sslg4/data/oscnt/olsc-105/: rIndex.txt
testSSLG4Ex/sslg4/data/oscnt/olsc-112/: absLength.txt  rIndex.txt
testSSLG4Ex/sslg4/data/oscnt/olsc-113/: absLength.txt
testSSLG4Ex/sslg4/data/oscnt/olsc-114/: scntComp1.txt
testSSLG4Ex/sslg4/data/oscnt/olsc-200/: rsLength.txt
testSSLG4Ex/sslg4/data/oscnt/olsc-204/: absLength.txt
testSSLG4Ex/sslg4/data/oscnt/opsc-100/: rIndex.txt
testSSLG4Ex/sslg4/data/oscnt/opsc-105/: scntComp1.txt
testSSLG4Ex/sslg4/data/oscnt/opsc-106/: absLength.txt
testSSLG4Ex/sslg4/data/oscnt/opsc-107/: absLength.txt
testSSLG4Ex/sslg4/data/oscnt/opsc-113/: scntComp1.txt
testSSLG4Ex/sslg4/data/oscnt/opsc-116/: absLength.txt
testSSLG4Ex/sslg4/data/oscnt/opsc-117/: scntComp1.txt
testSSLG4Ex/sslg4/include/: EJ426Builder.hh
testSSLG4Ex/sslg4/macros/iscnt/: isc-1001.mac  isc-3000.mac
testSSLG4Ex/sslg4/macros/oscnt/: olsc-103.mac  olsc-105.mac  olsc-107.mac  olsc-110.mac  olsc-111.mac  olsc-113.mac  olsc-203.mac  opsc-100.mac  opsc-103.mac  opsc-106.mac  opsc-109.mac  opsc-112.mac  opsc-113.mac  opsc-116.mac  opsc-122.mac  opsc-125.mac  opsc-126.mac  opsc-127.mac  opsc-128.mac  opsc-133.mac
testSSLG4Ex/sslg4/src/: InorganicScintillatorFactory.cc  OrganicScintillatorFactory.cc
(+8 files in other folders)
